--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -15,6 +15,6 @@
         <input type="password" id="password" name="password"><br><br>
         <button type="submit">Login</button>
     </form>
-    <p><a href="{% url 'signup' %}">Signup</a></p>
+    <p><h4>Don't have an account ? </h4><a href="{% url 'signup' %}"><h4> Sign up</h4></a></p>
 </body>
 </html>
